
2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* mlio.c, common.h: duplicated cob_xml/json_generate to allow
	  for new decimal_point param without breaking API from 2018
	* coblocal.h: include gettext without lib prefix

2020-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c [WITH_JSON_C]: added version output
	* mlio.c: adjusted check of defines for XML/JSON,
	  include json-c according to its docs

2020-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (install-data-hook): removed as per initial patch from
	  Eric Gallager in bug #73, fixing bug #576

2020-09-08  James K. Lowden  <jklowden@symas.com>

	* intrinsic.c (cob_intr_seconds_from_formatted_time): fix bug #886

2020-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c: huge performance improvements for INSPECT by splitting
	  the internal pseudo-marker into separate marker+replacement

2020-08-24  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (set_config_val): only create a new trace file if we already
	  have one open before

2020-07-30  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: minimal adjustments to --info output

2020-07-26  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (cob_screen_puts): fixed bug #665, where spaces where
	  replaced with underscores in DISPLAY.

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c, common.h: added support for JSON-C as JSON handler

2020-07-17  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c, common.h: added decimal_point param to cob_xml/json_generate
	  --> changed with merge to separate function

2020-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c: fixed memory issue

2020-06-30  Simon Sobisch <simonsobisch@gnu.org>

	new functions in the C API for cob_field based access, see FR #383 FR #384
	* common.c, common.h (cob_get_param_field, cob_get_field_size,
	  cob_get_field_sign, cob_get_field_scale, cob_get_field_digits,
	  cob_get_field_constant, cob_get_field_type, explain_field_type):