@@ -142,6 +142,24 @@ static void cob_screen_init	(void);
 
 /* Local functions */
 
+/* 
+ * Cf. GNU cpp info manual, section 7, Pragmas 
+ * 
+ * Define a macro to use the _Pragma operator, restricted to gcc.
+ * This section is experimental.  If it proves useful, it should be moved
+ * to coblocal.h.
+ */
+#if defined(__GNUC__)
+# define GCC_PRAGMA(w) \
+  _Pragma ("GCC diagnostic push") \
+  _Pragma (#w)
+# define GCC_POP()   _Pragma ("GCC diagnostic pop") 
+#else 
+# define  GCC_PRAGMA(w)
+# define  GCC_POP()
+#endif
+
+GCC_PRAGMA( GCC diagnostic ignored "-Wunused-result" )
 static void
 cob_speaker_beep (void)
 {
@@ -152,6 +170,7 @@ cob_speaker_beep (void)
 		(void)write (fd, "\a", (size_t)1);
 	}
 }
+GCC_POP()
 
 static COB_INLINE COB_A_INLINE void
 init_cob_screen_if_needed (void)
